<resources>
    <string name="app_name">智品惠</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_register">登录/注册</string>
    <string name="btn_confirm">确认</string>
    <string name="ed_hint_inputphone">请输入手机号</string>
    <string name="ed_hint_inputpwd">请输入密码</string>
    <string name="ed_hint_repwd">请确认密码</string>
    <string name="tv_forgetpwd">忘记密码</string>
    <string name="tv_phone_err">位数不正确</string>
    <string name="tv_pwd_err">密码长度至少6位数</string>
    <string name="tv_repwd_err">密码不一致</string>
    <string name="tv_yzm">验证码</string>
    <string name="ed_hint_yzm">请输入验证码</string>
    <string name="ed_hint_invite">请输入邀请人手机号</string>
    <string name="tv_service">服务条款</string>
    <string name="tv_other_login">其他登录方式</string>
    <string name="tv_1">找回密码</string>
    <string name="tv_2">手机号</string>
    <string name="tv_3">验证码</string>
    <string name="tv_4">确定</string>
    <string name="tv_5">新密码</string>
    <string name="tv_6">确认密码</string>
    <string name="ed_hint_new_inputpwd">请输入新密码</string>
    <string name="ed_hint_new_repwd">请确认新密码</string>
    <string name="tv_7">绑定手机</string>
    <string name="tv_8">绑定后,您可以直接通过手机号进行登陆</string>
    <string name="tv_9">推荐码</string>
    <string name="tv_10">请输入推荐人手机号（选填）</string>
    <string name="ae_add_bank">添加银行卡</string>
    <string name="al_getcode">获取验证码</string>
    <string name="arp_set_pwd_err">密码设置有误，请确保两次密码一致且长度在6到30之间</string>
    <string name="asp_input_incomplete">请输入密码</string>
    <string name="pay_title">请输入支付密码</string>
    <string name="pay_sure">确认支付</string>
    <string name="pay_cancel">取消</string>
    <string name="pay_exchange">兑换</string>
    <string name="ae_money_sign">¥</string>
    <string name="ae_alter_bank">是否修改银行卡</string>
    <string name="abc_top">请绑定持卡人本人银行卡</string>
    <string name="abc_name">持卡人</string>
    <string name="abc_name_hint">请输入持卡人姓名</string>
    <string name="abc_card_number">银行卡号</string>
    <string name="abc_card_number_hint">请输入银行卡号</string>
    <string name="abc_bank_name">开卡银行</string>
    <string name="abc_bank_name_hint">请选择开卡银行</string>
    <string name="abc_sub_name">开户支行</string>
    <string name="abc_sub_name_hint">请输入开户支行</string>
    <string name="abc_img_hint">开户支行</string>
    <string name="abc_bottom">需上传银行卡正面照</string>
    <string name="abc_select_province">选择省</string>
    <string name="abc_select_city">选择市</string>
    <string name="abc_select_area">选择区</string>
    <string name="arp_vercode_err">验证码错误</string>
    <string name="pay_pwd_length">支付密码设置有误，请确保两次密码一致且长度为6位</string>
    <string name="arp_set_pwd_success">设置密码成功</string>
    <string name="arp_set_pwd_fail">设置密码失败，请稍后重试</string>
    <string name="asp_pwd_diff">两次密码不一致，请重新输入</string>
    <string name="a_recommend_save">是否保存图片到手机</string>
    <string name="a_recommend_save_success">图片已保存到图库中</string>
    <string name="common_sel_province">请先选择省</string>
    <string name="common_sel_city">请先选择市</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="shezhi">设置</string>
    <string name="tv_set_pw">修改登陆密码</string>
    <string name="tv_set_pay_pw">修改二级密码</string>
    <string name="contact_kefu">联系客服</string>
    <string name="version">当前版本</string>
    <string name="exit">退出登录</string>
    <string name="about">关于智品惠</string>
    <string name="tv_11">设置支付密码</string>
    <string name="tv_12">找回支付密码</string>
    <string name="tv_13">支付密码</string>
    <string name="tv_14">请输入6位数字支付密码</string>
    <string name="tv_15">请确认支付密码</string>
    <string name="al_hint_inputphone">请输入正确的手机号</string>
    <string name="afl_code_len_err">请输入正确的验证码</string>
    <string name="tv_16">绑定银行卡</string>
    <string name="dialog_personal_exit">您确认退出该账号么</string>
    <string name="dialog_personal_phone">0755-23071963</string>
    <string name="activate_the_friends">激活好友</string>
    <string name="help_activate_the_friends">帮好友激活会员</string>
    <string name="the_remaining_places">剩余名额</string>
    <string name="the_quota_of_subsidiary">名额明细</string>
    <string name="activate_vip">激活会员</string>
    <string name="activate_number">待激活账号</string>
    <string name="edit_activate_number">请输入好友账号</string>
    <string name="verify_secondary_password">此操作需要验证二级密码</string>
    <string name="activate">激活</string>
    <string name="activate_remark">注:此操作将扣除一个名额</string>
    <string name="the_remaining_inventory">剩余库存</string>
    <string name="the_inventory_detail">库存明细</string>
    <string name="platform_inventory">平台库存:</string>
    <string name="available_inventory">可售库存:</string>
    <string name="pick_goods">提货</string>
    <string name="pick_num">提货数量</string>
    <string name="choose_address">请选择收货地址</string>
    <string name="commodity_integral">鼓励积分</string>
    <string name="wisdom_integral">智品积分</string>
    <string name="tv_17">首页</string>
    <string name="tv_18">推荐好友</string>
    <string name="tv_19">个人</string>
    <string name="tv_20">我的消息</string>
    <string name="tv_21">关于</string>
    <string name="tv_22">关于</string>
    <string name="tv_23">确认兑换</string>
    <string name="tv_24">兑换</string>
    <string name="tv_25">实名认证</string>
    <string name="tv_26">订单中心</string>
    <string name="tv_27">平台库存</string>
    <string name="tv_28">激活好友</string>
    <string name="tv_29">我的消息</string>
    <string name="tv_30">设置</string>
    <string name="tv_31">授权证书</string>
    <string name="tv_32">智品积分</string>
    <string name="tv_33">鼓励积分</string>
    <string name="tv_34">记录</string>
    <string name="tv_35">兑换记录</string>
    <string name="tv_36">啥也没有</string>
    <string name="tv_37">轻触屏幕重试</string>
    <string name="tv_38">网络状态不好</string>
    <string name="tv_39">我的收货地址</string>
    <string name="shouhuoren">收货人</string>
    <string name="phone">联系电话</string>
    <string name="diqu">请选择</string>
    <string name="dizhi">请填写详细地址</string>
    <string name="set_moren">设为默认地址</string>
    <string name="save">保存</string>
    <string name="add_dizhi">添加新地址</string>
    <string name="add_address">添加地址</string>
    <string name="binaji_dizhi">地址编辑</string>
    <string name="delete_dizhi">删除地址</string>
    <string name="manage_dizhi">管理收货地址</string>
    <string name="manage">管理</string>
    <string name="choose_dizhi">选择收货地址</string>
    <string name="moren">默认地址</string>
    <string name="bianji">编辑</string>
    <string name="delete">删除</string>
    <string name="order_center">订单中心</string>
    <string name="shop_order">商城订单</string>
    <string name="wisdom_order">智品订单</string>
    <string name="buy_order">购买订单</string>
    <string name="pick_order">提货订单</string>
    <string name="order_code">订单号:</string>
    <string name="pick_order_code">提货单号</string>
    <string name="pick_order_recrive_address">收货地址:</string>
    <string name="confirm_products">确认收货</string>
    <string name="confirm_remark">确认收货需要验证二级密码</string>
    <string name="the_carrier_source">承运来源:</string>
    <string name="waybill_number">运单编号:</string>
    <string name="the_official_phone">官方电话:</string>
    <string name="all_order">全部</string>
    <string name="un_deliver_order">待发货</string>
    <string name="shipped_order">待收货</string>
    <string name="pingjia">待评价</string>
    <string name="tv_40">您还未设置支付密码,是否立即设置?</string>
    <string name="tv_41">您还未实名认证,是否立即认证?</string>
    <string name="tv_42">实名认证</string>
    <string name="tv_43">请填写信息,以完成实名认证</string>
    <string name="tv_44">姓名</string>
    <string name="tv_45">身份证号</string>
    <string name="tv_46">请输入姓名</string>
    <string name="tv_47">请输入身份证号码</string>
    <string name="tv_48">上传证件照</string>
    <string name="tv_49">上传身份证正面照</string>
    <string name="tv_50">上传身份证反面照</string>
    <string name="tv_51">上传手持身份证照</string>
    <string name="tv_52">完成</string>
    <string name="tv_53">修改的信息还未保存,确认现在返回吗?</string>
    <string name="tv_54">确认删除吗?</string>
    <string name="tv_55">付款</string>
    <string name="tv_56">请在30分钟之内完成付款</string>
    <string name="tv_57">¥</string>
    <string name="tv_58">订单金额</string>
    <string name="tv_59">付款方式</string>
    <string name="tv_60">微信支付</string>
    <string name="tv_61">支付宝支付</string>
    <string name="tv_62">银行卡支付</string>
    <string name="tv_63">智品积分支付</string>
    <string name="tv_64">确认支付</string>
    <string name="tv_65">支付结果</string>
    <string name="tv_66">订单支付成功</string>
    <string name="tv_67">订单金额</string>
    <string name="tv_68">返回首页</string>
    <string name="tv_69">立即发货</string>
    <string name="tv_70">注意:智品惠平台及销售商不会以订单异常、系统升级为由要求您点击任何网址链接进行退款操作。</string>
    <string name="tv_71">确认订单</string>
    <string name="shifukuan">实付款:</string>
    <string name="submit_order">提交订单</string>
    <string name="tishi_1">可用积分:</string>
    <string name="tishi_2">智品惠商城</string>
    <string name="tishi_3">规格:</string>
    <string name="tishi_4">购买数量</string>
    <string name="tishi_5">配送方式</string>
    <string name="tishi_6">请添加收货地址</string>
    <string name="tishi_7">共</string>
    <string name="tishi_8">件商品</string>
    <string name="tishi_9">小计:</string>
    <string name="tishi_10">等级</string>
    <string name="tishi_11">更多产品</string>
    <string name="tishi_12">您的实名认证审核失败,是否立即修改</string>
    <string name="tishi_13">立即购买</string>
    <string name="tishi_14">商品</string>
    <string name="tishi_15">详情</string>
    <string name="tishi_16">+</string>
    <string name="tishi_17">积分)</string>
    <string name="tishi_18">请选择规格</string>
    <string name="tishi_19">下一步</string>
    <string name="tishi_20">推荐好友</string>
    <string name="tishi_21">好友管理</string>
    <string name="tishi_22">我的</string>
    <string name="tishi_23">推荐人:</string>
    <string name="tishi_24">已推荐</string>
    <string name="tishi_25">人</string>
    <string name="tishi_26">推荐规则</string>
    <string name="tishi_27">1、</string>
    <string name="tishi_28">你推荐的人提货一台小哈，你会得到150鼓励积分，同时你的销量会加1。</string>
    <string name="tishi_29">鼓励积分，同时你的销量会加1。</string>
    <string name="tishi_30">2、</string>
    <string name="tishi_31">你推荐的人又推荐一个人，购买一台小哈，你会得到200鼓励积分。</string>
    <string name="tishi_32">你会得到200鼓励积分</string>
    <string name="tishi_33">会员等级介绍</string>
    <string name="tishi_34">普通会员：购买一台小哈产品，购买价格为1688元/台，可获得1688智品积分。</string>
    <string name="tishi_35">创客会员：一次性购买10台或累计销量30台，购买价格为1688元/台，可获得1688智品积分，200鼓励积分。</string>
    <string name="tishi_36">董事会员：一次性购买30台或累计销量50台，购买价格为1688元/台，可获得1688智品积分，300鼓励积分。</string>
    <string name="tishi_37">大咖会员：一次性购买50台或累计销量80台，购买价格为1688元/台，可获得1688智品积分，400鼓励积分。</string>
    <string name="tishi_38">代理商：成为代理商需联系客服：0755-23071963，购买价格为1688元/台，可获得1688智品积分，500鼓励积分。</string>
    <string name="tishi_39">立即推荐</string>
    <string name="tishi_40">尺码规格</string>
    <string name="tishi_41">请选择规格</string>
    <string name="tishi_42">购买数量</string>
    <string name="tishi_43">货款</string>
    <string name="tishi_44">共:</string>
    <string name="tishi_45">人</string>
    <string name="tishi_46">订单号:</string>
    <string name="tishi_47">查看物流</string>
    <string name="tishi_48">确认收货</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="tishi_49">请输入提货数量</string>
    <string name="tishi_73">分类</string>
    <string name="tishi_74">活动</string>
    <string name="tishi_75">购物车</string>
    <string name="tishi_86">商品评价</string>
    <string name="tishi_87">好评</string>
    <string name="tishi_88">中评</string>
    <string name="tishi_89">差评</string>
    <string name="tishi_90">评价等级</string>
    <string name="tishi_91">请填写使用此商品的评价,给其他伙伴一些建议哦!</string>
    <string name="tishi_92">发布</string>
</resources>