<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blank_color"
    android:orientation="vertical">

    <com.zph.commerce.widget.TopNvgBar5
        android:id="@+id/top_nvg_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        custom:title="@string/tv_7" />

    <LinearLayout
        android:id="@+id/ll_yzm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_2"
                android:textColor="@color/tv_color2"
                android:textSize="@dimen/size_15" />

            <EditText
                android:id="@+id/et_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/ed_hint_inputphone"
                android:maxLength="16"
                android:paddingLeft="17dp"
                android:singleLine="true"
                android:textColor="@color/tv_color2"
                android:textColorHint="@color/tv_color4"
                android:textSize="@dimen/size_15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_3"
                android:textColor="@color/tv_color2"
                android:textSize="@dimen/size_15" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/ed_hint_yzm"
                android:maxLength="6"
                android:paddingLeft="17dp"
                android:singleLine="true"
                android:textColor="@color/tv_color2"
                android:textColorHint="@color/tv_color4"
                android:textSize="@dimen/size_15" />


            <TextView
                android:id="@+id/tv_yzm"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|right"
                android:background="@drawable/guide_shape"
                android:gravity="center|right"
                android:text="@string/tv_yzm"
                android:textColor="@color/bg_main_bottom"
                android:textSize="@dimen/size_13" />

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:gravity="center|left"
            android:text="@string/tv_8"
            android:textColor="@color/tv_color4"
            android:textSize="@dimen/size_13" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/tv_9"
                android:textColor="@color/tv_color2"
                android:textSize="@dimen/size_15" />

            <EditText
                android:id="@+id/et_invite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center|left"
                android:hint="@string/tv_10"
                android:maxLength="16"
                android:paddingLeft="17dp"
                android:singleLine="true"
                android:textColor="@color/tv_color2"
                android:textColorHint="@color/tv_color4"
                android:textSize="@dimen/size_15" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="46dp"
            android:background="@drawable/bg_login_style"
            android:text="@string/tv_4"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>








</LinearLayout>
