<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blank_color"
    android:orientation="vertical">

    <com.zph.commerce.widget.TopNvgBar5
        android:id="@+id/top_nvg_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        custom:title="@string/activate_vip" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_right"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <com.zph.commerce.view.HandyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tv_color2"
                android:textSize="@dimen/_size"
                android:text="@string/the_remaining_places"
                android:layout_gravity="center_horizontal"/>
            <com.zph.commerce.view.HandyTextView
                android:id="@+id/activate_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/tv_color2"
                android:textSize="@dimen/size_30"
                android:layout_marginTop="15dp"
                android:text="19"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.zph.commerce.view.HandyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activate_number"
                android:textSize="@dimen/_size"
                android:layout_marginLeft="50dp"
                android:textColor="@color/tv_color2"/>
            <EditText
                android:id="@+id/edit_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_size"
                android:layout_marginTop="5dp"
                android:hint="@string/edit_activate_number"
                android:background="@null"
                android:layout_marginLeft="50dp"
                android:textColor="@color/tv_color2"/>
        </LinearLayout>
        <com.zph.commerce.view.HandyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_secondary_password"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/bg_main_bottom2"/>
        <Button
            android:id="@+id/btn_activate"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_login_defaultstyle"
            android:text="@string/activate"
            android:textColor="@color/white"
            android:textSize="16sp" />
    <com.zph.commerce.view.HandyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_remark"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/_size"
        android:layout_marginLeft="50dp"
        android:textColor="@color/tv_color2"/>
</LinearLayout>
