<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blank_color"
    android:orientation="vertical">

    <com.zph.commerce.widget.TopNvgBar5
        android:id="@+id/top_nvg_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        custom:lvisible="true"
        custom:rvisible="false"
        custom:title="@string/tv_65" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_nvg_bar"
        android:background="@color/white"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="27.5dp"
            android:src="@drawable/pay_succeed" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tv_66"
            android:textColor="@color/tv_color2"
            android:textSize="@dimen/size_16" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_67"
                android:textColor="@color/tv_color2"
                android:textSize="@dimen/size_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:gravity="center"
                android:text="@string/tv_57"
                android:textColor="@color/color31"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_order_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="3000"
                android:textColor="@color/color31"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_shouye"
                android:layout_width="115dp"
                android:layout_height="35dp"
                android:background="@drawable/guide_shape"
                android:gravity="center"
                android:text="@string/tv_68"
                android:textColor="@color/bg_main_bottom"
                android:textSize="@dimen/size_16" />
            <TextView
                android:id="@+id/tv_fahuo"
                android:layout_width="115dp"
                android:layout_height="35dp"
                android:background="@drawable/guide_shape"
                android:gravity="center"
                android:layout_marginLeft="45dp"
                android:text="@string/tv_69"
                android:textColor="@color/bg_main_bottom"
                android:textSize="@dimen/size_16" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_blank_color"
            android:gravity="center|left"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:lineSpacingMultiplier="1.3"
            android:paddingTop="5dp"
            android:text="@string/tv_70"
            android:textColor="@color/ipm_date"
            android:textSize="@dimen/size_13" />




    </LinearLayout>


</LinearLayout>