<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blank_color"
    android:orientation="vertical">

    <com.zph.commerce.widget.TopNvgBar5
        android:id="@+id/top_nvg_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        custom:lvisible="true"
        custom:rvisible="false"
        custom:title="@string/tishi_86" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingLeft="15dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tishi_90"
            android:textColor="@color/tv_color2"
            android:textSize="@dimen/size_15" />


        <TextView
            android:id="@+id/tv_good"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="22.5dp"
            android:drawableLeft="@drawable/bg_evaluate_good"
            android:drawablePadding="7dp"
            android:gravity="center"
            android:text="@string/tishi_87"
            android:textColor="@color/main_evaluate_textcolor" />


        <TextView
            android:id="@+id/tv_medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/bg_evaluate_medium"
            android:drawablePadding="7dp"
            android:gravity="center"
            android:text="@string/tishi_88"
            android:textColor="@color/main_evaluate_textcolor" />


        <TextView
            android:id="@+id/tv_negative"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:drawableLeft="@drawable/bg_evaluate_negative"
            android:drawablePadding="7dp"
            android:gravity="center"
            android:text="@string/tishi_89"
            android:textColor="@color/main_evaluate_textcolor" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:background="@color/white">


        <EditText
            android:id="@+id/ed_evaluate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:gravity="center|left|top"
            android:hint="@string/tishi_91"
            android:maxLength="50"
            android:paddingTop="15dp"
            android:textColor="@color/tv_color2"
            android:textColorHint="@color/text_hint_color"
            android:textSize="@dimen/size_15" />


        <LinearLayout
            android:id="@+id/ll_dizhi_tishi"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center|right|bottom"
            android:background="@color/white"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/img_detaldes_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/img_notice_close" />
        </LinearLayout>
    </FrameLayout>


    <Button
        android:id="@+id/btn_evaluate"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_login_style"
        android:text="@string/tishi_92"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>